# Lyrify

./: .gitmodules  CHANGELOG.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml  funding.yml
doc/: status_codes.md
docs/: status_codes.md  style.md
src/core/: __main__.py  com.py  config.py  dbus.py  mac.py  winrt_wmc.py
src/core/print/: default_print.py  ias_utils.py  interactive_print.py  stream_print.py
src/lyric_providers/: lrclib.py
src/lyrify/: main.py
src/lyrify/core/: __main__.py  config.py
src/lyrify/core/print/: default_print.py  ias_utils.py
src/lyrify/db_sqlite/: __init__.py
src/lyrify/spotify/: api_init.py  api_request.py  oauth.py
src/spotify/: api_init.py  api_request.py  oauth.py
src/sqlite3/: __init__.py  lyrics.db
src/translator/: googletrans.py
src/utils/: romanizer_uroman.py  winrt_sessions.py
utils/spotify/: user_authorization.py
utils/spotify_api/: get_track.py  user_authorization.py
